[package]
name = "dom"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
virtual-dom-rs = { git="https://github.com/chinedufn/percy"}
wasm-bindgen = "0.2.29"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Document",
    "Element",
    'HtmlElement',
    "EventTarget",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
]
