[package]
name = "simple_hello_world"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.29"
halcyon = {path="../../halcyon"}
halcyon_macro = {path="../../halcyon_macro"}
halcyon_dom = {path="../../halcyon_dom"}

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Document",
    "Element",
    'HtmlElement',
    "EventTarget",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
]
